# mulle-domain

./: .gitignore  CMakeLists.txt  CMakePackage.cmake  LICENSE  Makefile  README.md  RELEASENOTES.md  mulle-domain  mulle-domain-completion.sh
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  executable.md.bud  info.md  properties.plist  usage.md.bud  you-are-here.md.bud
dox/: Makefile  mulle-domain-overview.dot
dox/reference/: TODO.md  backup.md  clean.md  configure.md  domain.md  environment.md  index.md  info.md  init.md  reset.md  restore.md  settings.md  status.md  version.md
src/: mulle-domain-commands.sh  mulle-domain-compose.sh  mulle-domain-guess.sh  mulle-domain-parse.sh  mulle-domain-plugin.sh  mulle-domain-resolve.sh
src/plugins/: clib.sh  generic.sh  github.sh  githubusercontent.sh  gitlab.sh  sourceforge.sh  sr.sh
test/: run-test
test/10-parse/: run-test
test/20-compose/: run-test
test/30-github/: run-test
test/71-guess/: run-test
